--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
         <h5>I'm a header 5!</h5>
         
         <h6>I'm a header 6!</h6>
+        
+        <img src="https://avatars3.githubusercontent.com/u/47828953?v=4" />
 
     </body>
 
